--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     canvas {
       display: block;
     }
-    #leftButton, #rightButton {
-      position: absolute; bottom: 20px; padding: 15px; 
-      background-color: rgba(0, 0, 0, 0.5); color: white;
-      font-size: 24px; border-radius: 50%; cursor: pointer;
+    /* Zıplama Butonu */
+    #jumpButton {
+      position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
+      padding: 15px 30px; background-color: rgba(0, 0, 0, 0.5); color: white;
+      font-size: 24px; border-radius: 20px; cursor: pointer;
+      user-select: none;
     }
-    #leftButton { left: 20px; } #rightButton { right: 20px; }
   </style>
 </head>
 <body>
@@ -27,7 +28,9 @@
   <img id="face2" src="https://i.hizliresim.com/37shbzf.png" style="display: none;">
   
   <canvas id="gameCanvas"></canvas>
-  <div id="leftButton">←</div><div id="rightButton">→</div>
+  
+  <!-- Zıplama Butonu -->
+  <div id="jumpButton">Zıpla</div>
 
   <script>
     const canvas = document.getElementById("gameCanvas"), ctx = canvas.getContext("2d");
@@ -93,10 +96,15 @@
       }
     });
 
-    document.getElementById("leftButton").addEventListener("touchstart", () => character1.velX = -character1.speed);
-    document.getElementById("rightButton").addEventListener("touchstart", () => character1.velX = character1.speed);
-    document.getElementById("leftButton").addEventListener("touchend", () => character1.velX = 0);
-    document.getElementById("rightButton").addEventListener("touchend", () => character1.velX = 0);
+    // Zıplama Butonu İşlevi
+    document.getElementById("jumpButton").addEventListener("click", () => {
+      if (character1.grounded || doubleJumpAvailable) {
+        character1.velY = -jumpStrength;
+        character1.grounded = false;
+        character1.jumping = true;
+        doubleJumpAvailable = character1.grounded ? true : false;
+      }
+    });
 
     function updateCharacters() {
       character1.velY += gravity;
@@ -126,11 +134,11 @@
       platforms.forEach(p => ctx.fillRect(p.x, p.y, p.width, p.height));
       hearts.forEach(h => { if (!h.collected) drawHeart(h.x, h.y, h.type); });
       obstacles.forEach(o => { ctx.fillStyle = "black"; ctx.fillRect(o.x, o.y, o.width, o.height); });
+
       ctx.drawImage(face1, character1.x, character1.y - 10, character1.width, character1.height);
       ctx.drawImage(face2, character2.x, character2.y - 10, character2.width, character2.height);
+
       ctx.fillStyle = "black"; ctx.font = "24px Arial"; ctx.fillText(`Skor: ${score}`, 30, 30); ctx.fillText(`Canlar: ${lives}`, 30, 60);
-      if (loveMessageTimer > 0) { ctx.fillStyle = "red"; ctx.font = "30px Arial"; ctx.fillText("Aşkınız Başladı! <3", canvas.width / 2 - 150, canvas.height / 2); loveMessageTimer--; }
-      if (levelMessageTimer > 0) { ctx.fillStyle = "blue"; ctx.font = "30px Arial"; ctx.fillText(`Seviye Başlıyor! ${level}. Seviye`, canvas.width / 2 - 150, canvas.height / 2); levelMessageTimer--; }
     }
 
     function gameLoop() { updateCharacters(); draw(); requestAnimationFrame(gameLoop); }
