--- a/index.html
+++ b/index.html
@@ -5,90 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kalp Toplama Oyunu</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #87CEEB;
+    body, canvas { 
+      margin: 0; padding: 0; 
+      overflow: hidden; background-color: #87CEEB; 
+      display: block;
+      width: 100%; height: 100%; 
     }
     canvas {
       display: block;
-      background-color: #87CEEB;
     }
-    #controls {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      z-index: 1000;
-    }
-    .button {
-      width: 60px;
-      height: 60px;
-      background-color: rgba(0, 0, 0, 0.5);
+    /* Butonlar için stil */
+    #leftButton, #rightButton, #jumpButton {
+      position: absolute; 
+      bottom: 20px; 
+      padding: 15px; 
+      background-color: rgba(0, 0, 0, 0.5); 
       color: white;
-      border-radius: 50%;
-      display: inline-block;
-      margin: 5px;
-      text-align: center;
-      line-height: 60px;
+      font-size: 24px; 
+      border-radius: 50%; 
       cursor: pointer;
-      font-size: 20px;
     }
-    .button:hover {
-      background-color: rgba(0, 0, 0, 0.7);
-    }
+    #leftButton { left: 20px; }
+    #rightButton { right: 20px; }
+    #jumpButton { bottom: 100px; left: 50%; transform: translateX(-50%); }
+
   </style>
 </head>
 <body>
+  <img id="face1" src="https://i.hizliresim.com/r6bm8a9.png" style="display: none;">
+  <img id="face2" src="https://i.hizliresim.com/37shbzf.png" style="display: none;">
+  
   <canvas id="gameCanvas"></canvas>
-
   <!-- Butonlar -->
-  <div id="controls">
-    <div id="left" class="button">←</div>
-    <div id="right" class="button">→</div>
-    <div id="jump" class="button">↑</div>
-  </div>
+  <div id="leftButton">←</div>
+  <div id="rightButton">→</div>
+  <div id="jumpButton">↑</div>
 
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+    const canvas = document.getElementById("gameCanvas"), ctx = canvas.getContext("2d");
+    let score = 0, level = 1, lives = 3, doubleJumpAvailable = true, loveMessageTimer = 0, levelMessageTimer = 0;
 
-    let score = 0;
-    let lives = 3;
+    const character1 = { x: 200, y: canvas.height - 200, width: 40, height: 40, velX: 0, velY: 0, speed: 5, jumping: false, grounded: false };
+    const character2 = { x: character1.x + 40, y: character1.y, width: 40, height: 40 };
+    const gravity = 0.5, jumpStrength = 14;
+    let platforms = [], hearts = [], obstacles = [];
 
-    // Karakterler
-    const character1 = {
-      x: 200, y: canvas.height - 200,
-      width: 40, height: 40,
-      velX: 0, velY: 0,
-      speed: 5,
-      jumping: false, grounded: false
-    };
+    // Ekran boyutunu ayarlamak için
+    function resizeCanvas() { 
+      canvas.width = window.innerWidth; 
+      canvas.height = window.innerHeight; 
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas(); // Sayfa yüklendiğinde ekranı uygun şekilde ayarla
 
-    const character2 = {
-      x: character1.x + 40, y: character1.y,
-      width: 40, height: 40
-    };
-
-    const gravity = 0.5;
-    const friction = 0.8;
-    const jumpStrength = 14;
-
-    // Platformlar, kalpler, engeller
-    let platforms = [];
-    let hearts = [];
-    let obstacles = [];
-
-    // Seviye için platformlar ve kalpler
     function createLevel() {
       const baseY = canvas.height - 100;
       platforms = [];
       hearts = [];
       obstacles = [];
       
-      platforms = [
+      const platformData = [
         { x: 0, y: baseY, width: canvas.width, height: 100 },
         { x: 200, y: baseY - 100, width: 150, height: 20 },
         { x: 400, y: baseY - 180, width: 150, height: 20 },
@@ -97,161 +73,85 @@
         { x: 1150, y: baseY - 100, width: 150, height: 20 }
       ];
 
-      hearts = [
+      const heartData = [
         { x: 240, y: baseY - 140, collected: false, type: 'normal' },
-        { x: 460, y: baseY - 220, collected: false, type: 'normal' },
-        { x: 720, y: baseY - 290, collected: false, type: 'strong' },
+        { x: 460, y: baseY - 220, collected: false, type: 'strong' },
+        { x: 720, y: baseY - 290, collected: false, type: 'normal' },
         { x: 980, y: baseY - 220, collected: false, type: 'normal' },
         { x: 1240, y: baseY - 140, collected: false, type: 'strong' }
       ];
 
-      // Engeller
-      for (let i = 0; i < 5; i++) {
-        const obstacle = {
-          x: Math.random() * (canvas.width - 30),
-          y: Math.random() * (canvas.height - 200),
-          width: 30,
-          height: 30,
-          color: 'red'
-        };
-        obstacles.push(obstacle);
+      platforms.push(...platformData);
+      hearts.push(...heartData);
+
+      for (let i = 0; i < 6; i++) {
+        obstacles.push({ x: Math.random() * (canvas.width - 30), y: Math.random() * (canvas.height - 200), width: 30, height: 30 });
       }
     }
 
     createLevel();
 
-    // Kamera
-    let camera = { x: 0, y: 0 };
+    const keys = {};
+    window.addEventListener("keydown", e => keys[e.key] = true);
+    window.addEventListener("keyup", e => keys[e.key] = false);
 
-    function updateCamera() {
-      camera.x = character1.x - canvas.width / 2 + character1.width / 2;
-      camera.y = character1.y - canvas.height / 2 + character1.height / 2;
-      camera.x = Math.max(0, Math.min(camera.x, canvas.width - canvas.width));
-      camera.y = Math.max(0, Math.min(camera.y, canvas.height - canvas.height));
-    }
+    let touchStart = { x: 0, y: 0 }, touchEnd = { x: 0, y: 0 };
+    canvas.addEventListener("touchstart", e => { touchStart = { x: e.touches[0].clientX, y: e.touches[0].clientY }; });
+    canvas.addEventListener("touchmove", e => { touchEnd = { x: e.touches[0].clientX, y: e.touches[0].clientY }; });
+    canvas.addEventListener("touchend", () => {
+      if (touchEnd.y - touchStart.y > 30 && (character1.grounded || doubleJumpAvailable)) {
+        character1.velY = -jumpStrength; character1.grounded = false; character1.jumping = true;
+        doubleJumpAvailable = character1.grounded ? true : false;
+      }
+    });
 
-    // Butonlara tıklama olayları
-    const leftButton = document.getElementById("left");
-    const rightButton = document.getElementById("right");
-    const jumpButton = document.getElementById("jump");
+    document.getElementById("leftButton").addEventListener("touchstart", () => character1.velX = -character1.speed);
+    document.getElementById("rightButton").addEventListener("touchstart", () => character1.velX = character1.speed);
+    document.getElementById("jumpButton").addEventListener("touchstart", () => {
+      if (character1.grounded || doubleJumpAvailable) {
+        character1.velY = -jumpStrength; character1.grounded = false; character1.jumping = true;
+        doubleJumpAvailable = character1.grounded ? true : false;
+      }
+    });
 
-    let leftPressed = false;
-    let rightPressed = false;
-    let jumpPressed = false;
+    document.getElementById("leftButton").addEventListener("touchend", () => character1.velX = 0);
+    document.getElementById("rightButton").addEventListener("touchend", () => character1.velX = 0);
+    document.getElementById("jumpButton").addEventListener("touchend", () => {});
 
-    leftButton.addEventListener("touchstart", () => leftPressed = true);
-    leftButton.addEventListener("touchend", () => leftPressed = false);
-
-    rightButton.addEventListener("touchstart", () => rightPressed = true);
-    rightButton.addEventListener("touchend", () => rightPressed = false);
-
-    jumpButton.addEventListener("touchstart", () => jumpPressed = true);
-    jumpButton.addEventListener("touchend", () => jumpPressed = false);
-
-    // Karakterlerin hareketi
     function updateCharacters() {
       character1.velY += gravity;
+      if (keys["a"] || keys["ArrowLeft"]) character1.velX -= 0.5;
+      if (keys["d"] || keys["ArrowRight"]) character1.velX += 0.5;
+      character1.velX *= 0.8;
+      character1.x += character1.velX; character1.y += character1.velY;
 
-      if (leftPressed) character1.velX -= 0.5;
-      if (rightPressed) character1.velX += 0.5;
-
-      character1.velX *= friction;
-      character1.x += character1.velX;
-      character1.y += character1.velY;
-
-      updateCamera();
-
-      // Platformlarla etkileşim
-      character1.grounded = false;
-      for (let p of platforms) {
-        if (
-          character1.x + character1.width > p.x &&
-          character1.x < p.x + p.width &&
-          character1.y + character1.height > p.y &&
-          character1.y + character1.height < p.y + p.height + character1.velY
-        ) {
-          character1.y = p.y - character1.height;
-          character1.velY = 0;
-          character1.grounded = true;
-          character1.jumping = false;
-        }
-      }
-
-      // Zıplama
-      if (jumpPressed && character1.grounded) {
-        character1.velY = -jumpStrength;
-        character1.jumping = true;
-        character1.grounded = false;
-      }
-
-      // Ekran sınırları
+      character1.grounded = platforms.some(p => character1.x + character1.width > p.x && character1.x < p.x + p.width && character1.y + character1.height > p.y && character1.y + character1.height < p.y + p.height + character1.velY);
+      if (character1.grounded) { character1.y = platforms.find(p => character1.x + character1.width > p.x && character1.x < p.x + p.width).y - character1.height; character1.velY = 0; }
       if (character1.x < 0) character1.x = 0;
       if (character1.x + character1.width > canvas.width) character1.x = canvas.width - character1.width;
-      if (character1.y + character1.height > canvas.height) {
-        character1.y = canvas.height - character1.height;
-        character1.grounded = true;
-        character1.jumping = false;
-        character1.velY = 0;
-      }
-
-      character2.x = character1.x + character1.width;
-      character2.y = character1.y;
+      if (character1.y + character1.height > canvas.height) { character1.y = canvas.height - character1.height; character1.grounded = true; character1.velY = 0; }
+      
+      character2.x = character1.x + character1.width; character2.y = character1.y;
     }
 
-    // Kalp toplama ve engel çarpma
-    function checkHeartCollection() {
-      for (let heart of hearts) {
-        if (heart.collected) continue;
-        if (
-          (character1.x < heart.x + 30 && character1.x + character1.width > heart.x &&
-            character1.y < heart.y + 30 && character1.y + character1.height > heart.y) ||
-          (character2.x < heart.x + 30 && character2.x + character2.width > heart.x &&
-            character2.y < heart.y + 30 && character2.y + character2.height > heart.y)
-        ) {
-          heart.collected = true;
-          score += heart.type === 'normal' ? 10 : 25;
-        }
-      }
+    function drawHeart(x, y, type) {
+      ctx.fillStyle = type === 'strong' ? "purple" : "red";
+      ctx.beginPath(); ctx.moveTo(x, y); ctx.bezierCurveTo(x, y - 10, x - 10, y - 10, x - 10, y + 5);
+      ctx.bezierCurveTo(x - 10, y + 15, x, y + 20, x, y + 25); ctx.bezierCurveTo(x, y + 20, x + 10, y + 15, x + 10, y + 5);
+      ctx.bezierCurveTo(x + 10, y - 10, x, y - 10, x, y); ctx.fill();
     }
 
-    // Çizim
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // Platformları, kalpleri, engelleri çizin
-      platforms.forEach(p => ctx.fillRect(p.x - camera.x, p.y - camera.y, p.width, p.height));
-      hearts.forEach(h => {
-        if (!h.collected) {
-          ctx.fillStyle = h.type === 'strong' ? "purple" : "red";
-          ctx.beginPath();
-          ctx.moveTo(h.x - camera.x, h.y - camera.y);
-          ctx.bezierCurveTo(h.x - camera.x, h.y - camera.y - 10, h.x - camera.x - 10, h.y - camera.y - 10, h.x - camera.x - 10, h.y - camera.y + 5);
-          ctx.bezierCurveTo(h.x - camera.x - 10, h.y - camera.y + 15, h.x - camera.x, h.y - camera.y + 20, h.x - camera.x, h.y - camera.y + 25);
-          ctx.bezierCurveTo(h.x - camera.x, h.y - camera.y + 20, h.x - camera.x + 10, h.y - camera.y + 15, h.x - camera.x + 10, h.y - camera.y + 5);
-          ctx.bezierCurveTo(h.x - camera.x + 10, h.y - camera.y - 10, h.x - camera.x, h.y - camera.y - 10, h.x - camera.x, h.y - camera.y);
-          ctx.fill();
-        }
-      });
-
-      obstacles.forEach(o => {
-        ctx.fillStyle = "black";
-        ctx.fillRect(o.x - camera.x, o.y - camera.y, o.width, o.height);
-      });
-
-      ctx.fillStyle = "black";
-      ctx.font = "24px Arial";
-      ctx.fillText("Skor: " + score, 30, 30);
-      ctx.fillText("Canlar: " + lives, 30, 60);
+      platforms.forEach(p => ctx.fillRect(p.x, p.y, p.width, p.height));
+      hearts.forEach(h => { if (!h.collected) drawHeart(h.x, h.y, h.type); });
+      obstacles.forEach(o => { ctx.fillStyle = "black"; ctx.fillRect(o.x, o.y, o.width, o.height); });
+      ctx.drawImage(face1, character1.x, character1.y - 10, character1.width, character1.height);
+      ctx.drawImage(face2, character2.x, character2.y - 10, character2.width, character2.height);
+      ctx.fillStyle = "black"; ctx.font = "24px Arial"; ctx.fillText(`Skor: ${score}`, 30, 30); ctx.fillText(`Canlar: ${lives}`, 30, 60);
     }
 
-    // Oyun döngüsü
-    function gameLoop() {
-      updateCharacters();
-      checkHeartCollection();
-      draw();
-      requestAnimationFrame(gameLoop);
-    }
-
+    function gameLoop() { updateCharacters(); draw(); requestAnimationFrame(gameLoop); }
     gameLoop();
   </script>
 </body>
