--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
   <title>Kalp Toplama Oyunu</title>
   <style>
     body, canvas {
@@ -42,7 +43,7 @@
   <div id="jumpButton">↑</div>
 
   <script>
-    const canvas = document.getElementById("gameCanvas"), ctx = canvas.getContext("2d");
+    const canvas = document.getElementById("gameCanvas"),
     let score = 0, level = 1, lives = 3, doubleJumpAvailable = true, loveMessageTimer = 0, levelMessageTimer = 0;
 
     const character1 = { x: 200, y: canvas.height - 200, width: 40, height: 40, velX: 0, velY: 0, speed: 5, jumping: false, grounded: false };
