--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="jumpButton">↑</div>
 
   <script>
-    const canvas = document.getElementById("gameCanvas"),
+    const canvas = document.getElementById("gameCanvas");
     let score = 0, level = 1, lives = 3, doubleJumpAvailable = true, loveMessageTimer = 0, levelMessageTimer = 0;
 
     const character1 = { x: 200, y: canvas.height - 200, width: 40, height: 40, velX: 0, velY: 0, speed: 5, jumping: false, grounded: false };
