--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       overflow: hidden;
       background-color: #87CEEB;
       display: block;
+      touch-action: none; 
       width: 100%; height: 100%;
     }
     canvas {
